syntax = "proto3";

option go_package = ".;utxostore_api";

package utxostore_api;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service UtxoStoreAPI {
  // Health returns the health of the API.
  rpc Health (google.protobuf.Empty) returns (HealthResponse) {}
  rpc Store (StoreRequest) returns (StoreResponse) {}
  rpc BatchStore (BatchStoreRequest) returns (BatchStoreResponse) {}
  rpc Spend (SpendRequest) returns (SpendResponse) {}
  rpc Reset (ResetRequest) returns (ResetResponse) {}
  rpc Delete (DeleteRequest) returns (DeleteResponse) {}
  rpc Get (GetRequest) returns (GetResponse) {}
}

// swagger:model HealthResponse
message HealthResponse {
  bool ok = 1;
  string details = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// swagger:enum Status
enum Status {
  OK = 0;
  SPENT = 1;
  LOCKED = 2;
  NOT_FOUND = 3;
  ALREADY_EXISTS = 4;
}

// swagger:model StoreRequest
message StoreRequest {
  bytes utxo_hash = 1;
  uint32 lock_time = 2;
}

// swagger:model StoreResponse
message StoreResponse {
  Status status = 1;
}

// swagger:model BatchStoreRequest
message BatchStoreRequest {
  repeated bytes utxo_hashes = 1;
  uint32 lock_time = 2;
}

// swagger:model BatchStoreResponse
message BatchStoreResponse {
  Status status = 1;
}

// swagger:model SpendRequest
message SpendRequest {
  bytes uxto_hash = 1;
  bytes spending_txid = 2;
}

// swagger:model SpendResponse
message SpendResponse {
  Status status = 1;
  bytes spending_txid = 2;
}

// swagger:model ResetRequest
message ResetRequest {
  bytes uxto_hash = 1;
}

// swagger:model ResetResponse
message ResetResponse {
  Status status = 1;
}

// swagger:model DeleteRequest
message DeleteRequest {
  bytes uxto_hash = 1;
}

// swagger:model DeleteResponse
message DeleteResponse {
  Status status = 1;
}

// swagger:model GetRequest
message GetRequest {
  bytes uxto_hash = 1;
}

// swagger:model GetResponse
message GetResponse {
  Status status = 1;
  bytes spending_txid = 2;
}
